log/build_2023-05-28_15-49-49/py_imagesub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/mike/ros2_opencv_lander/install/py_imagesub/lib/python3.10/site-packages/py_imagesub/subscriber_member_function.py", line 20
    from ros_numpy as rnp
                   ^^
SyntaxError: invalid syntax

